--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 <body>
 <div class="images">
   <img src="C:\Users\jereh\Downloads\Subject.png" class="boy">
+  <img src="Subject.png" class="boy">
+  
   <img src="C:\Users\jereh\Downloads\image_shape_guide.png" class="shape"> 
   </div>
 
@@ -201,7 +203,7 @@
           );
         });
       </script>
-      
+
    <body> 
     <footer>
 <element class="footer">
