--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body>
 <div class="images">
-  <img src="C:\Users\jereh\Downloads\Subject.png" class="boy">
+
   <img src="Subject.png" class="boy">
   
   <img src="C:\Users\jereh\Downloads\image_shape_guide.png" class="shape"> 
@@ -66,18 +66,18 @@
           <div class="col-md-4 text-center">
               <h4>Web Development</h4>
               <p>HTML, CSS, JavaScript</p>
-              <img src="C:\Users\jereh\OneDrive\Pictures For projects\11096817.png" class="card-img-top4" alt="Programing icon">
+              <img src="11096817.png" class="card-img-top4" alt="Programing icon">
           </div>
           <div class="col-md-4 text-center">
               <h4>Programming</h4>
               <p>Python,C++</p>
               
-<img src="C:\Users\jereh\OneDrive\Pictures For projects\267_Python-512.webp" class="card-img-top2" alt="Programing icon">
+              <img src="267_Python-512.webp" class="card-img-top2" alt="Programing icon">
           </div>
           <div class="col-md-4 text-center">
               <h4>Tools</h4>
               <p>Git, GitHub, VS Code</p>
-              <img src="C:\Users\jereh\OneDrive\Pictures For projects\25231.png" class="card-img-top3" alt="Programing icon">
+              <img src="25231.png" class="card-img-top3" alt="Programing icon">
             </div>
       </div>
   </div>
