--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>
+                <li class="nav-item"><a class="nav-link" href="#blog section">Blog</a></li>
               </ul>
       </nav>
               </section>
@@ -79,6 +79,7 @@
               <h4>Tools</h4>
               <p>Git, GitHub, VS Code</p>
               <img src="25231.png" class="card-img-top3" alt="Programing icon">
+              
             </div>
       </div>
   </div>
@@ -97,8 +98,12 @@
                     <div class="card-body">
                         <h5 class="card-title">Personal Portfolio Website</h5>
                         <p class="card-text">A responsive portfolio to showcase my skills and projects.</p>
-                        <a href="#" class="btn btn-primary">View Project</a>
-                        <a href="#" class="btn btn-secondary">GitHub Repo</a>
+                        <a href="https://jerehn13.github.io/Portfolio/" class="btn btn-primary" target="_blank">View Project</a>
+                        <a href="https://github.com/jerehn13/Portfolio" class="btn btn-secondary" target="_blank">GitHub Repo</a>
+
+
+                        
+
                     </div>
                 </div>
             </div>
@@ -113,6 +118,14 @@
                           create, edit, delete, and filter tasks.</p>
                         <a href="#" class="btn btn-primary">View Project</a>
                         <a href="#" class="btn btn-secondary">GitHub Repo</a>
+
+
+
+
+
+
+
+
                     </div>
                 </div>
             </div>
