--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <!-- Project 2 -->
             <div class="col-md-6 mb-4">
               <div class="card">
-                  <img src="project2-thumbnail.jpg" class="card-img-top" alt="Project 2 Thumbnail">
+                  <img src="Screenshot 2024-12-28 093731.png" class="card-img-top" alt="Project 2 Thumbnail">
                   <div class="card-body">
                       <h5 class="card-title">Dynamic Task manager</h5>
                       <p class="card-text">A dynamic task manager application that allows users to
