--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <img src="Subject.png" class="boy">
   
-  <img src="C:\Users\jereh\Downloads\image_shape_guide.png" class="shape"> 
+  
   </div>
 
 <div class="detel">
@@ -47,7 +47,8 @@
   <p>this is my official portfolio website to showcase
     <br>all my skills and projects  
 </p>
-<a href="#">Contact Me</a>
+  <p>Phone: +1 240 524 2875</p>
+
 </div>
   </section>
 </body>
@@ -117,8 +118,8 @@
                       <p class="card-text">A dynamic task manager application that allows users to
                         create, edit, delete, and filter tasks.</p>
                       <a href="https://jerehn13.github.io/Dynamic-Task-Manager/" class="btn btn-primary" target="_blank">View Project</a>
-                      <a href="#" class="btn btn-secondary" target="_blank">GitHub Repo</a>
-                      <a href="#" class="btn btn-secondary" target="_blank">Code Pen</a>
+                      <a href="https://github.com/jerehn13/Dynamic-Task-Manager" class="btn btn-secondary" target="_blank">GitHub Repo</a>
+                      <a href="https://codepen.io/jerehn13/pen/VYZzayM" class="btn btn-secondary" target="_blank">Code Pen</a>
 
 
 
