--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <script src="C:\Users\jereh\OneDrive\Pictures For projects\jquery-3.7.1.min.js"></script>
   <script src="main.js"></script>
   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <script src="script.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -95,7 +94,7 @@
             <!-- Project 1 -->
             <div class="col-md-6 mb-4">
                 <div class="card">
-                    <img src="project1-thumbnail.jpg" class="card-img-top" alt="Project 1 Thumbnail">
+                    <img src="Screenshot 2024-12-28 174509 - Copy.png" class="card-img-top" alt="Project 1 Thumbnail">
                     <div class="card-body">
                         <h5 class="card-title">Personal Portfolio Website</h5>
                         <p class="card-text">A responsive portfolio to showcase my skills and projects.</p>
