--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <h5 class="card-title">E-Commerce Product Page </h5>
           <p class="card-text">A responsive e-commerce product page that displays
             products from a public API.</p>
-          <a href="#" class="btn btn-primary">View Project</a>
+          <a href="https://jerehn13.github.io/E-Commerce-Product-Page/" class="btn btn-primary">View Project</a>
           <a href="#" class="btn btn-secondary">GitHub Repo</a>
         </div>
       </div>
