--- a/index.html
+++ b/index.html
@@ -139,14 +139,19 @@
   <div class="row justify-content-center">
     <div class="col-md-6 mb-4">
       <div class="card">
-        <img src="project3-thumbnail.jpg" class="card-img-top" alt="Project 3 Thumbnail">
+        <img src="Screenshot 2025-01-03 181925.png" class="card-img-top" alt="Project 3 Thumbnail">
         <div class="card-body">
           <h5 class="card-title">E-Commerce Product Page </h5>
           <p class="card-text">A responsive e-commerce product page that displays
             products from a public API.</p>
-          <a href="https://jerehn13.github.io/E-Commerce-Product-Page/" class="btn btn-primary">View Project</a>
-          <a href="#" class="btn btn-secondary">GitHub Repo</a>
-        </div>
+          <a href="https://jerehn13.github.io/E-Commerce-Product-Page/" class="btn btn-primary" target="_blank">View Project</a>
+          <a href="https://github.com/jerehn13/E-Commerce-Product-Page" class="btn btn-secondary" target="_blank">GitHub Repo</a>
+          <a href="https://phenomenal-marzipan-b9a741.netlify.app/" 
+   class="btn"
+   style="background-color: #ffd700; color: black; border-color: #ffd700;"  
+   target="_blank">Netifly</a>
+
+        </div> 
       </div>
     </div>
   </div>
