--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <!-- Brand -->
-    <a class="navbar-brand" href="#home">Jeremiah Essilfie</a>
+    <a class="navbar-brand" href="#home">Jeremiah.</a>
 
     <!-- Hamburger Menu (Toggler) -->
     <button 
@@ -41,13 +41,14 @@
     </button>
 
     <!-- Collapsible Navigation Links -->
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mx-auto">
-        <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#about me">About me</a></li>
-        <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-        <li class="nav-item"><a class="nav-link" href="#blog section">Blog</a></li>
+    <div class="collapse navbar-collapse ms-auto" id="navbarNav">
+      <ul class="navbar-nav d-flex justify-content-end w-100">
+        <li class="nav-item"><a class="nav-link text-black fw-bold" href="#home">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-black fw-bold" href="#about me">About me</a></li>
+        <li class="nav-item"><a class="nav-link text-black fw-bold" href="#skills">Skills</a></li>
+        <li class="nav-item"><a class="nav-link text-black fw-bold" href="#projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link text-black fw-bold" href="#blog section">Blog</a></li>
+        <li class="nav-item"><a class="nav-link text-black fw-bold" href="#Contact Me">Contact</a></li>
       </ul>
 
     </div>
@@ -56,10 +57,17 @@
     </header>
   </body>
   
+
+
+
+
+
+
+  
   <!-- First picture of me -->
   <body>
     <div class="image-container">
-      <img src="" class="profile-image">
+      <img src="6E5D88CC-386A-4DCA-896D-1E563749EB3F.jpeg" class="profile-image">
     </div>
   </body>
 
@@ -67,6 +75,7 @@
 
 
   <!-- About Me section title -->
+  <section id="about me">
 <div class="detel">
   <h1>About <span> Me</span></h1>
   
@@ -117,7 +126,7 @@
 
 
 <!-- Skills Section -->
- 
+<section id="skills">
 <div class="detel">
   <h1>My <span> Skills</span></h1>
   
@@ -137,7 +146,7 @@
               <img src="logo-python.svg" class="skill-img" alt="Python">
               <h3>Python</h3>
               <p>Proficient in Python for data analysis, scripting, and automation.</p>
-              <a href="https://example.com/python-certificate" class="cert-link" target="_blank">View Certificate</a>
+              <a href="https://www.udemy.com/certificate/UC-c6534fe1-4d5b-448d-9b2d-c5fde5e2b26b/" class="cert-link" target="_blank">View Certificate</a>
           </div>
 
           <!-- Skill 2 -->
@@ -186,7 +195,7 @@
 
 
 <!-- projects Section -->
-
+<section id="projects"></section>
 <div class="detel">
   <h1>My <span> Projects</span></h1>
   
@@ -233,6 +242,8 @@
 
 
     <!-- Blog Section -->
+    <section id="blog section"> <!-- Corrected ID -->
+
     <div class="detel">
       <h1>Blog</h1>  
     </p>
@@ -356,7 +367,7 @@ loadBlogPosts();
   <!-- Contact Section the working version --> 
 
 
-  <section id="contact" class="contact-section">
+  <section id="Contact Me" class="contact-section">
        
 <div class="detel">
   <h1>Contact <span>Me</span></h1> 
@@ -392,17 +403,17 @@ loadBlogPosts();
       <div class="form-container">
         <form id="form">
           <div class="field">
-            <label for="from_name">Name ❤️❤️❤️</label>
+            <label for="from_name">Name 🖤🖤🖤</label>
             <input type="text" name="from_name" id="from_name" required>
           </div>
   
           <div class="field">
-            <label for="from_email">Your Email ❤️❤️❤️</label>
+            <label for="from_email">Your Email 🖤🖤🖤</label>
             <input type="email" name="to_name" id="to_name" required>
           </div>
   
           <div class="field">
-            <label for="message">Message ❤️❤️❤️</label>
+            <label for="message">Message 🖤🖤🖤</label>
             <textarea name="message" id="message" rows="4" required></textarea>
           </div>
   
