--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <!-- Header -->
   <!-- Header -->
 <header>
-  <nav class="navbar navbar-expand-lg navbar-black bg-black">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <!-- Brand -->
-    <a class="navbar-brand text-white" href="#home">Jeremiah.</a>
+    <a class="navbar-brand" href="#home"> Jeremiah.</a>
 
     <!-- Hamburger Menu (Toggler) -->
     <button 
@@ -43,12 +43,12 @@
     <!-- Collapsible Navigation Links -->
     <div class="collapse navbar-collapse ms-auto" id="navbarNav">
       <ul class="navbar-nav d-flex justify-content-end w-100">
-        <li class="nav-item"><a class="nav-link text-white fw-bold" href="#home">Home</a></li>
-        <li class="nav-item"><a class="nav-link text-white fw-bold" href="#about me">About me</a></li>
-        <li class="nav-item"><a class="nav-link text-white fw-bold" href="#skills">Skills</a></li>
-        <li class="nav-item"><a class="nav-link text-white fw-bold" href="#projects">Projects</a></li>
-        <li class="nav-item"><a class="nav-link text-white fw-bold" href="#blog section">Blog</a></li>
-        <li class="nav-item"><a class="nav-link text-white fw-bold" href="#Contact Me">Contact</a></li>
+        <li class="nav-item"><a class="nav-link text-black fw-bold" href="#home">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-black fw-bold" href="#about me">About me</a></li>
+        <li class="nav-item"><a class="nav-link text-black fw-bold" href="#skills">Skills</a></li>
+        <li class="nav-item"><a class="nav-link text-black fw-bold" href="#projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link text-black fw-bold" href="#blog section">Blog</a></li>
+        <li class="nav-item"><a class="nav-link text-black fw-bold" href="#Contact Me">Contact</a></li>
       </ul>
 
     </div>
