--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           
           <div class="about-text">
               <p>
-                  I'm Jeremiah, a passionate web developer and technology enthusiast born in Ghana. 
+                  I'm Jeremiah Essilfie, a passionate web developer and technology enthusiast born in Ghana. 
                   I love creating responsive, user-friendly applications and continuously 
                   learning new technologies to enhance my skills.
               </p>
