--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <!-- Header -->
   <!-- Header -->
 <header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg" style="border-bottom: none !important; box-shadow: none !important; background-color: white;">
+
+    
     <!-- Brand -->
     <a class="navbar-brand" href="#home"> Jeremiah.</a>
 
