--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ loadBlogPosts();
    <body> 
     <footer>
 <footer class="footer">
-  <p>&copy; All Rights Reserved | Jeremiah Essilfie</p>
+  <p> All Rights Reserved | Jeremiah Essilfie</p>
 </footer>
 
    </body>
