--- a/index.html
+++ b/index.html
@@ -405,17 +405,17 @@ loadBlogPosts();
       <div class="form-container">
         <form id="form">
           <div class="field">
-            <label for="from_name">Name 🖤🖤🖤</label>
+            <label for="from_name">Name </label>
             <input type="text" name="from_name" id="from_name" required>
           </div>
   
           <div class="field">
-            <label for="from_email">Your Email 🖤🖤🖤</label>
+            <label for="from_email">Your Email </label>
             <input type="email" name="to_name" id="to_name" required>
           </div>
   
           <div class="field">
-            <label for="message">Message 🖤🖤🖤</label>
+            <label for="message">Message </label>
             <textarea name="message" id="message" rows="4" required></textarea>
           </div>
   
