--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         <!-- Blog posts will be dynamically added here -->
       </div>
       <div class="new-post-form">
-        <h3>Create a New Post</h3>
+        <h3>Noted Blog Section</h3>
         <input type="text" placeholder="Post Title" id="post-title" />
         <textarea placeholder="Post Content" id="post-content"></textarea>
         <button onclick="savePost()">Publish</button>
