--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ loadBlogPosts();
    <body> 
     <footer>
 <footer class="footer">
-  <p> © | Jeremiah Essilfie</p>
+  <p> All rights reserved | Jeremiah Essilfie</p>
 </footer>
 
    </body>
