--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <!-- First picture of me -->
   <body>
     <div class="image-container">
-      <img src="6E5D88CC-386A-4DCA-896D-1E563749EB3F.jpeg" class="profile-image">
+      <img src="Screenshot 2025-09-06 213708.png" class="profile-image">
     </div>
   </body>
 
